--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
                     </div>
                     <div class="place__column">
                         <img class="place__image" src="images/place-winter-baikal.jpg" alt="зимний байкал">
-                        <divclass="place__paragraph">
+                        <div class="place__paragraph">
                             <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
                             <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, 
                             и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
-                        </divclass=>
+                        </div>
                     </div>
                 </div>
                 <div class="place">
