--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                     <div class="place__column">
                         <img class="place__image" src="images/place-kosa.jpg" alt="куршская коса">
                         <div class="place__paragraph">
-                            <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой.
+                            <p>Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой.
                              Уникальная природная зона на краю российского анклава.</p>
-                            <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника 
+                            <p>На этом Калининградская область не заканчивается. Для путешественника 
                             и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы 
                             и запах стального, прохладного моря.</p>
                         </div>
@@ -84,9 +84,9 @@
                     <div class="place__column">
                         <img class="place__image" src="images/place-kolsky.jpg" alt="кольский">
                         <div class="place__paragraph">
-                            <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, 
+                            <p>Почти весь полуостров находится за Полярным кругом. Саамская тундра, 
                             от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-                            <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля 
+                            <p>Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля 
                             в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. 
                             Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
                         </div>
@@ -103,10 +103,10 @@
                     <div class="place__column">
                         <img class="place__image" src="images/place-altai.jpg" alt="алтай">
                         <div class="place__paragraph">
-                            <p class="place__paragraph">Алтай — одно из красивейших мест 
+                            <p>Алтай — одно из красивейших мест 
                             в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. 
                             А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
-                            <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны.
+                            <p>Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны.
                              По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
                         </div>
                     </div>
@@ -122,8 +122,8 @@
                     <div class="place__column">
                         <img class="place__image" src="images/place-winter-baikal.jpg" alt="зимний байкал">
                         <div class="place__paragraph">
-                            <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
-                            <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, 
+                            <p>Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
+                            <p>Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, 
                             и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                 </section>
                 <section class="cover">
                     <a class="cover__item" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-                        <h2 class="cover__title section-title section-title_size_medium">
+                        <h2 class="cover__title">
                             До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;
                         </h2>
                         <p class="cover__subtitle">
