--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <header class="header">
             <img class="header__logo" src="images/header-logo.svg" alt="логотип">
                 <div class="header__lang-list">
-                    <a class="header__lang-link " href="#">Ru</a>
-                    <a class="header__lang-link header__lang-link_disabled" href="#">En</a>
+                    <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
+                    <a class="header__lang-link" href="#">En</a>
                 </div>
         </header>
         <main class="content">
@@ -25,11 +25,11 @@
             <section class="intro">
                 <h2 class="intro__title">Чего мы там не видели?</h2>
 
-                <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. 
-                    Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами 
-                    Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. 
-                    Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, 
-                    усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. 
+                <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране.
+                    Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами
+                    Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов.
+                    Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей,
+                    усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране.
                     Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
 
                 <p class="intro__list">Часовых поясов <span class="intro__list-light">11</span></p>
@@ -37,7 +37,7 @@
                 <p class="intro__list">Объектов культурного наследия ЮНЕСКО <span class="intro__list-light">16</span></p>
                 <p class="intro__list">Природных заповедников <span class="intro__list-light">105</span></p>
                 <p class="intro__list">Аэропортов <span class="intro__list-light">241</span></p>
-                    
+
             </section>
             <section class="photo-grid">
                 <img class="photo-grid__item" src="images/photo-grid-arisa.jpg" alt="ариса">
@@ -51,7 +51,7 @@
                 <img class="photo-grid__item" src="images/photo-grid-kondratiev.jpg" alt="кондратиев">
                 <img class="photo-grid__item" src="images/photo-grid-sochi.jpg" alt="сочи">
                 <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="поезд">
-                <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="тюмань">            
+                <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="тюмань">
             </section>
             <section class="places">
                 <div class="place">
@@ -65,10 +65,10 @@
                     <div class="place__column">
                         <img class="place__image" src="images/place-kosa.jpg" alt="куршская коса">
                         <div class="place__paragraph">
-                            <p>Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой.
+                            <p class="place__paragraph-text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой.
                              Уникальная природная зона на краю российского анклава.</p>
-                            <p>На этом Калининградская область не заканчивается. Для путешественника 
-                            и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы 
+                            <p class="place__paragraph-text">На этом Калининградская область не заканчивается. Для путешественника
+                            и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы
                             и запах стального, прохладного моря.</p>
                         </div>
                     </div>
@@ -84,10 +84,10 @@
                     <div class="place__column">
                         <img class="place__image" src="images/place-kolsky.jpg" alt="кольский">
                         <div class="place__paragraph">
-                            <p>Почти весь полуостров находится за Полярным кругом. Саамская тундра, 
+                            <p class="place__paragraph-text">Почти весь полуостров находится за Полярным кругом. Саамская тундра,
                             от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-                            <p>Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля 
-                            в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. 
+                            <p class="place__paragraph-text">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля
+                            в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии.
                             Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
                         </div>
                     </div>
@@ -103,10 +103,10 @@
                     <div class="place__column">
                         <img class="place__image" src="images/place-altai.jpg" alt="алтай">
                         <div class="place__paragraph">
-                            <p>Алтай — одно из красивейших мест 
-                            в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. 
+                            <p class="place__paragraph-text">Алтай — одно из красивейших мест
+                            в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра.
                             А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
-                            <p>Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны.
+                            <p class="place__paragraph-text">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны.
                              По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
                         </div>
                     </div>
@@ -122,8 +122,8 @@
                     <div class="place__column">
                         <img class="place__image" src="images/place-winter-baikal.jpg" alt="зимний байкал">
                         <div class="place__paragraph">
-                            <p>Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
-                            <p>Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, 
+                            <p class="place__paragraph-text">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
+                            <p class="place__paragraph-text">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу,
                             и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                         </div>
                     </div>
@@ -138,11 +138,14 @@
                     </div>
                     <div class="place__column">
                         <img class="place__image" src="images/place-karelia.jpg" alt="карелия">
-                        <p class="place__paragraph">Сибирь заканчивается не на Урале, 
-                            а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает 
-                            на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
-                             В девственном лесу на сотню километров не встретишь тропы. 
-                            А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+                           <div class="place__paragraph">
+                             <p class="place__paragraph-text">Сибирь заканчивается не на Урале,
+                                а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает
+                                на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
+                                В девственном лесу на сотню километров не встретишь тропы.
+                                А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
+                            </p>
+                        </div>
                     </div>
                 </div>
                 </section>
